--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .classpath
 .project
 *.prefs
+
+.settings/org.eclipse.wst.common.component
+
+.settings/org.eclipse.wst.common.project.facet.core.xml
