--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.amazonaws</groupId>
 	<artifactId>kinesis-scaling-utils</artifactId>
-	<version>.9.5.1-beta-1</version>
+	<version>.9.5.1</version>
 	<properties>
-		<sdk-version>1.10.74</sdk-version>
+		<sdk-version>1.11.29</sdk-version>
 	</properties>
 	<licenses>
 		<license>
