--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 	</properties>
 	<licenses>
 		<license>
-			<name>Amazon Software License</name>
-			<url>https://aws.amazon.com/asl</url>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -78,7 +78,7 @@
 				<artifactId>license-maven-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<header>${basedir}/license/asl/header.txt</header>
+					<header>${basedir}/license/header.txt</header>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
